feat: get store by id
